--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -23,6 +23,14 @@
    	<listener>      
        	<listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>      
    	</listener>
+   	<filter>
+	   	<filter-name>SpringOpenSessionInViewFilter</filter-name>
+	   	<filter-class>org.springframework.orm.hibernate5.support.OpenSessionInViewFilter</filter-class>
+ 	</filter>
+  	<filter-mapping>
+    	<filter-name>SpringOpenSessionInViewFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+  	</filter-mapping>
 	<!-- 编码过滤器 -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
